# skillistry

./: .env.example  .gitignore  main.py  pyproject.toml
api/: routes.py  schemas.py
graph/: nodes.py  state.py  workflow.py
modules/: __init__.py  audio_processor.py  content_analyzer.py  speech_analyzer.py  video_analyzer.py
utils/: helpers.py
