[project]
name = "skillistry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "deepface>=0.0.100",
    "fastapi[standard]>=0.136.3",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.1",
    "moviepy>=2.2.1",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "speechrecognition>=3.16.1",
    "tf-keras>=2.21.0",
    "uvicorn[standard]>=0.48.0",
]
